# artifact

./: .gitignore  .gitmodules  .pylintrc  .travis.yml  CONTRIBUTORS.md  Cargo.toml  Cross.toml  LICENSE.txt  README.md  appveyor.yml  artifact-frontend.js  artifact-frontend.wasm  build.rs  db.dump  env  fake-index.html  index.html  initial.json  justfile  notes.txt  rustfmt.toml  viz-lite.js
.art/: settings.toml
artifact-app/: Cargo.toml  build.rs
artifact-app/src/: check.rs  dev_prelude.rs  export.rs  fmt.rs  frontend.rs  init.rs  lib.rs  ls.rs
artifact-app/src/serve/: handler.rs  mod.rs
artifact-app/tests/: data_artifact.rs  data_family.rs  data_graph.rs  data_implemented.rs  data_interop.rs  data_name.rs  data_raw.rs  data_raw_names.rs  lib_ser.rs  serve_interop.rs
artifact-data/: .travis.yml  Cargo.toml  LICENSE-APACHE
artifact-data/.art/: settings.toml
artifact-data/design/: artifact.md  cache.md  family.md  implemented.md  modify.md  name.md  purpose.md  raw.md  structs.md
artifact-data/interop_tests/basic/: assert_project.yaml  assert_project_lints.yaml
artifact-data/interop_tests/basic/.art/: settings.toml
artifact-data/interop_tests/basic/design/: foo.md  purpose.md
artifact-data/interop_tests/design_only/: assert_project.yaml
artifact-data/interop_tests/design_only/assert-cases/delete/: assert_project.yaml  modify.yaml
artifact-data/interop_tests/design_only/assert-cases/multi/: assert_project.yaml
artifact-data/interop_tests/design_only/assert-cases/overlap/: modify.yaml
artifact-data/interop_tests/design_only/assert-cases/update/: modify.yaml
artifact-data/interop_tests/design_only/assert-cases/update-dne/: assert_modify_fail.yaml
artifact-data/interop_tests/design_only/assert-cases/update-invalid-id/: modify.yaml
artifact-data/interop_tests/empty/: assert_project.yaml
artifact-data/interop_tests/empty/design/: .empty
artifact-data/interop_tests/interop_locations/: assert.yaml
artifact-data/interop_tests/interop_locations/.art/: settings.toml
artifact-data/interop_tests/interop_locations/src/: example.py
artifact-data/interop_tests/lints/design/: purpose.md
artifact-data/interop_tests/source_invalid/: assert_load_lints.yaml
artifact-data/interop_tests/source_only/: assert_project.yaml
artifact-data/interop_tests/source_only/.art/: settings.toml
artifact-data/interop_tests/source_only/pylib/: __init__.py
artifact-data/src/: artifact.rs  cache.rs  dev_prelude.rs  expand_names.rs  family.rs  graph.rs  implemented.rs  intermediate.rs  lib.rs  lint.rs  modify.rs  name.rs  partof.rs  path_abs.rs  project.rs  raw.rs  raw_names.rs  settings.rs
artifact-data/src/test/: artifact.rs  dev_prelude.rs  family.rs  framework.rs  graph.rs  implemented.rs  mod.rs  name.rs  raw.rs  raw_names.rs
artifact-frontend/: .gitignore  Cargo.toml  justfile  shell.nix
artifact-frontend/src/: artifact.rs  dev_prelude.rs  edit.rs  example.rs  fetch.rs  graph.rs  main.rs  name.rs  nav.rs  view.rs  viz.rs
artifact-frontend/static/: fontawesome-all.js  index.html  initial.json
artifact-lib/: Cargo.toml
artifact-lib/src/: dev_prelude.rs  expand_names.rs  expected.rs  family.rs  lib.rs  lint.rs  name.rs  ser.rs
artifact-ser/: Cargo.toml
artifact-ser/src/: dev_prelude.rs  expand_names.rs  family.rs  lib.rs  lint.rs  markdown.rs  md_graph.rs  name.rs  ser.rs
artifact-test/: .gitignore  Cargo.toml  README.md
artifact-test/interop_tests/basic/: build.rs
artifact-test/interop_tests/basic/.art/: settings.toml
artifact-test/interop_tests/basic/assert-cases/basic/: assert_project.yaml
artifact-test/interop_tests/basic/design/: purpose.md
artifact-test/interop_tests/basic/src/: baz.rs
artifact-test/interop_tests/basic/src/foo/: mod.rs  test.rs
artifact-test/interop_tests/design_only/assert-cases/basic/: assert_project.yaml
artifact-test/interop_tests/design_only/assert-cases/delete/: assert_load_lints.yaml  assert_project.yaml
artifact-test/interop_tests/design_only/assert-cases/multi/: assert_project.yaml  modify.yaml
artifact-test/interop_tests/design_only/assert-cases/overlap/: assert_modify_fail.yaml
artifact-test/interop_tests/design_only/assert-cases/update/: assert_project.yaml
artifact-test/interop_tests/design_only/assert-cases/update-dne/: modify.yaml
artifact-test/interop_tests/design_only/assert-cases/update-invalid-id/: assert_modify_fail.yaml
artifact-test/interop_tests/design_only/design/: purpose.md
artifact-test/interop_tests/empty/.art/: settings.toml
artifact-test/interop_tests/empty/assert-cases/basic/: assert_project.yaml
artifact-test/interop_tests/empty/assert-cases/create-one/: assert_project.yaml  modify.yaml
artifact-test/interop_tests/lints/assert-cases/basic/: assert_project_lints.yaml
artifact-test/interop_tests/lints/design/: text.toml
artifact-test/interop_tests/lints/src/: lib.rs
artifact-test/interop_tests/lints2/: README.md
artifact-test/interop_tests/lints2/.art/: settings.toml
artifact-test/interop_tests/lints2/assert-cases/basic/: assert_load_lints.yaml  assert_project.yaml  assert_project_lints.yaml
artifact-test/interop_tests/lints2/design/: purpose.md
artifact-test/interop_tests/settings/: Cargo.toml  build.rs  exported.md
artifact-test/interop_tests/settings/.art/: settings.toml
artifact-test/interop_tests/settings/assert-cases/basic/: assert_project.yaml
artifact-test/interop_tests/settings/design/: foo.md  purpose.md
artifact-test/interop_tests/settings/src/foo/: fab.rs
artifact-test/interop_tests/source_invalid/.art/: settings.toml
artifact-test/interop_tests/source_invalid/src/: one.py  two-b.py  two.py
artifact-test/interop_tests/source_only/.art/: settings.toml
artifact-test/interop_tests/source_only/assert-cases/basic/: assert_project.yaml
artifact-test/interop_tests/source_only/pylib/: example.py
artifact-test/interop_tests/source_only/src/: lib.rs
artifact-test/src/: artifact.rs  dev_prelude.rs  family.rs  framework.rs  graph.rs  implemented.rs  lib.rs  name.rs  raw.rs  raw_names.rs
artifact-test/tests/: run_interop.rs
(+576 files in other folders)
