[package]
authors = ["Garrett Berg <vitiral@gmail.com>"]
description = """
Artifact is a design doc tool made for developers. It allows anyone to
easily write and link their design docs both to each other and to source code,
making it easy to track how complete their project is.
Documents are revision controllable, can be rendered as a static
web page and have a full suite of command line tools for searching,
formatting and displaying them.
"""
documentation = "http://vitiral.github.io/artifact/"
keywords = [
    "cmdline",
    "tool",
    "requirements",
    "documentation",
    "testing",
]
license = "MIT OR Apache-2.0"
name = "artifact-app"
readme = "README.md"
repository = "https://github.com/vitiral/artifact"
version = "1.1.0-beta002"

[dependencies]
difference = "1.0.0"
ergo = "0.0.1"
self_update = "0.4.0"
serde = "1.0.*"
serde_derive = "1.*"
termstyle = "0.1.2"
unicode-segmentation = "1.2.0"
unicode-width = "0.1.4"
expect_macro = "0.2.0"
indexmap = {version="1.0.0", features=["serde-1"]}
nickel = "0.10.1"
jsonrpc-core = "7.*"
artifact_data = {path = "artifact-data"}
artifact_lib = {path = "artifact-lib"}

[dependencies.quicli]
path = "quicli"
default-features = false

[dev-dependencies]
assert_cli = "0.5.4"
# pretty_assertions = "0.5.0"
