[package]
authors = ["Garrett Berg <googberg@gmail.com>"]
name = "artifact-data"
version = "0.1.0"

[dependencies]
base64 = "0.9.0"
ergo = "0.0.1"
expect_macro = "0.2.0"
matches = "0.1"
petgraph = "0.4"
rayon = "0.9"
serde = "1.*"
serde_derive = "1.*"
siphasher = "0.2.2"
time = "0.1"

[dependencies.failure]
git = "https://github.com/withoutboats/failure"

[dependencies.failure_derive]
git = "https://github.com/withoutboats/failure_derive"

[dependencies.ordermap]
features = ["serde-1"]
version = "0.3"

[dev-dependencies]
pretty_assertions = "0.4"
proptest = "0.3"
rand = "0.3"
regex_generate = "0.2"
tempdir = "0.3"
unicode-segmentation = "1.2"

[features]
default = []
