[package]
authors = ["Garrett Berg <googberg@gmail.com>"]
name = "artifact_data"
version = "0.1.0"
edition = "2018"

[dependencies]
base64 = "0.9.2"
ergo = "0.0.*"
expect_macro = "0.2.1"
matches = "0.1.6"
petgraph = "0.4.12"
rayon = "1.0.1"
serde = "1.0.66"
serde_derive = "1.0.66"
siphasher = "0.2.2"
time = "0.1.40"
failure = "0.1.1"
failure_derive = "0.1.1"
log = "0.4.2"
artifact_lib = {path="../artifact-lib"}
artifact_ser = {path="../artifact-ser"}

[dev-dependencies]
pretty_assertions = "0.5.1"
proptest = "0.7.1"
regex_generate = "0.2.0"
tempdir = "0.3.7"
unicode-segmentation = "1.2.1"

[features]
default = []
