[package]
name = "artifact-frontend"
version = "0.1.0"
authors = ["Garrett Berg <googberg@gmail.com>"]
edition = "2018"

[dependencies]
yew = "0.4.0"
stdweb = "0.4.13"
artifact_ser = {path="../artifact-ser"}
ergo_std = {git="https://github.com/rust-crates/ergo", branch="path_abs-4.0"}
ergo_config = {git="https://github.com/rust-crates/ergo", branch="path_abs-4.0"}
yew_simple = "0.3.0"
expect_macro = "0.2.1"
jrpc = "0.4.0"
http = "0.1.14"

[dev-dependencies]
