[package]
name = "artifact_lib"
version = "0.1.0"
authors = ["Garrett Berg <googberg@gmail.com>"]
edition = "2018"

[dependencies]
base64 = "0.9.2"
path_abs = "0.4.1"
serde = "1.0.66"
serde_derive = "1.0.66"
failure = "0.1.1"
failure_derive = "0.1.1"
expect_macro = "0.2.1"
ergo_std = "0.0.3"
ergo_config = "0.0.1"
siphasher = "0.2.2"
artifact_ser = { path = "../artifact-ser" }
