[package]
name = "artifact_ser"
version = "0.1.0"
authors = ["Garrett Berg <googberg@gmail.com>"]
edition = "2018"

[dependencies]
serde = "1.0.66"
serde_derive = "1.0.66"
expect_macro = "0.2.1"
lazy_static = "1.0.1"
indexmap = "1.0.1"
ergo_std = {git="https://github.com/rust-crates/ergo", branch="path_abs-4.0"}
ergo_config = {git="https://github.com/rust-crates/ergo", branch="path_abs-4.0"}
base64 = "0.9.2"
derive-error = "0.0.4"
strfmt = "0.1.6"
